--- a/CalculadoraService/Services/API2/API2.csproj
+++ b/CalculadoraService/Services/API2/API2.csproj
@@ -20,6 +20,8 @@
   <PropertyGroup>
     <GenarateDocumentationFile>true</GenarateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
+    <ApplicationIcon />
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
