--- a/CalculadoraService/Tests/API2.UnitTests/API2.UnitTests.csproj
+++ b/CalculadoraService/Tests/API2.UnitTests/API2.UnitTests.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\API2.Domain\API2.Domain.csproj" />
+    <ProjectReference Include="..\..\Services\API2.Domain\API2.Domain.csproj" />
   </ItemGroup>
 
 </Project>
